ngày 4 refacter toan bo du an